2020-10-20  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* libpoke/ios-dev-stream.c: Add missing include "pk-utils.h".

2020-10-19  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* testsuite/poke.mi-json/pk_int.json: Add new line at the end.
	* testsuite/poke.mi-json/pk_uint.json: Likewise.
	* testsuite/poke.mi-json/pk_offset.json: Likewise.
	* testsuite/poke.mi-json/pk_string.json: Likewise.
	* testsuite/poke.mi-json/pk_array.json: Add new line at the end and
	trim trailing whitespaces.
	* testsuite/poke.mi-json/pk_sct.json: Likewise.
	* poke/pk-cmd-ios.c: Expand TAB to 8 spaces.
	* libpoke/ios-buffer.h: Likewise.
	* libpoke/ios-buffer.c: Likewise.
	* libpoke/ios.c: Put space after function name.
	* libpoke/ios-dev-stream.c: Expand TAB to 8 spaces. Put space after
	function names. Use STREQ. Remove `if` before `free`. Remove inclusion
	of assert.h.
	* libpoke/ios-buffer.h: Reformat function prototypes according to the
	GNU Coding Standards.

2020-10-12  Egeyar Bagcioglu  <egeyar@gmail.com>

	* libpoke/Makefile.am (libpoke_la_SOURCES): Add ios-buffer.h,
	ios-buffer.c and ios-dev-stream.c.
	* libpoke/ios-buffer.c: New file.
	* libpoke/ios-buffer.h: New file.
	* libpoke/ios-dev-stream.c: New file.
	* libpoke/ios.c: Extern ios_dev_stream.
	(ios_dev_ifs): Add ios_dev_stream.

2020-10-11  Egeyar Bagcioglu  <egeyar@gmail.com>

	* libpoke/ios.c (ios_flush): Divide the offset by 8 before passing it
	to io->dev_if->flush which accepts offsets in the granularity of bytes.

2020-10-11  Egeyar Bagcioglu  <egeyar@gmail.com>

	* libpoke/ios-dev-file.c (ios_dev_file_get_if_name): New.
	* libpoke/ios-dev-mem.c (ios_dev_mem_get_if_name): New.
	* libpoke/ios-dev-nbd.c (ios_dev_nbd_get_if_name): New.
	* libpoke/ios-dev.h (get_if_name): New.
	* libpoke/ios.c (ios_get_dev_if_name): New.
	* libpoke/ios.h (ios_get_dev_if_name): New.
	* libpoke/libpoke.c (pk_ios_get_dev_if_name): New.
	* libpoke/libpoke.h (pk_ios_get_dev_if_name): New.